--- a/_posts/2018-05-25-appleeps.md
+++ b/_posts/2018-05-25-appleeps.md
@@ -17,13 +17,13 @@ The forecasting analysts utilized eight forecasting models outlined in Table 1. 
 
 *Table 1. Forecasting Methods and Outcomes*
 
-<img src="{{ site.url }}{{ site.baseurl }}/images/mse.png" alt="">
+<img src="{{ site.url }}{{ site.baseurl }}/images/mse.jpg" alt="">
 
 Based on the data presented above, the lowest MSEs and best fitting model were determined to be Winter’s Method and the Auto Regressive Integrated Moving Average Model (“ARIMA”) Method; See Figure 1 below for a comparison of the ARIMA and Winter’s Method model versus the actual earnings per share.  As ARIMA has more parameters that provide better insight into future behavior and the ARIMA squared errors for a smaller data series – from Q4 2014 to Q1 2018 – has a very low MSE (0.17); as such – we determine ARIMA is the best fit for forecasting the Q2 2018 earnings per share.
 
 *Figure 1. ARIMA and Winters Forecasting versus Actual Earnings per Share*
 
-<img src="{{ site.url }}{{ site.baseurl }}/images/forecast.png" alt="">
+<img src="{{ site.url }}{{ site.baseurl }}/images/forecast.jpg" alt="">
 
 **Model Assumptions**
 
@@ -47,7 +47,7 @@ Next, we differenced the data by four to reduce the seasonal effect (because the
 
 When looking at the ACF chart, we find the autocorrelation neither decays exponentially nor it spikes at lag 1. As a result, the data fits none of the models (MA, AR, ARMA). We ended up using (0,1,0) for our non-seasonal component of the model.
 
-<img src="{{ site.url }}{{ site.baseurl }}/images/arima.png" alt="">
+<img src="{{ site.url }}{{ site.baseurl }}/images/arima.jpg" alt="">
 
 Figure 2 shows our model after applying (0,1,0) (0,1,1). The model has an AIC of only 46.5 and a SBC of 48.5. The R square is 0.826 meaning that the model explains 82.6% of the variations in the data. The ACF and PACF of the residuals show almost no autocorrelations and the time series of errors is stationary with a zero mean. As a result, we think our model is significant. The forecasting of the model gives us 2.7 for 2018 Q2 2018’s earnings per share.
 
@@ -67,7 +67,7 @@ Apple has a history of exceeding the forecasted earnings per share estimates; Se
 
 *Figure 3. Apple Historical Earnings Estimates vs. Actuals3*
 
-<img src="{{ site.url }}{{ site.baseurl }}/images/history.png" alt="">
+<img src="{{ site.url }}{{ site.baseurl }}/images/history.jpg" alt="">
 
 Industry
 
@@ -75,7 +75,7 @@ The computer hardware industry and technology sector are expected to rapidly gro
 
 *Table 2. Industry Growth Forecasts[3]*
 
-<img src="{{ site.url }}{{ site.baseurl }}/images/industry.png" alt="">
+<img src="{{ site.url }}{{ site.baseurl }}/images/industry.jpg" alt="">
 
 Based on the details of Apple and Industry trends, we judgmentally increased the forecasted ARIMA predicted value of $2.70 by $0.05 to come up with a final predicted value of $2.75 for Q2 2018.  Actual earnings per share will be released by Apple on May 1, 2018 at 2 p.m. PT / 5 p.m. ET.
 
