--- a/_posts/2018-05-25-appleeps.md
+++ b/_posts/2018-05-25-appleeps.md
@@ -3,7 +3,7 @@ title: "Apple, Inc. Q2 2018 Earnings per Share Forecast"
 date: 2018-01-28
 tages: [apple, forecast, ARIMA]
 header:
-  image: "/image/appleeps/apple.png"
+  image: "/image/appleeps/apple.jpg"
 ---
 **Executive Summary:**
 
